--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "Epicenter-JS-Libs",
   "version": "0.0.1",
   "devDependencies": {
-    "grunt-dox": "^0.5.0"
+    "grunt": "^0.4.5",
+    "grunt-mocha": "^0.4.11"
   }
 }
