--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-mocha": "^0.4.11"
+    "grunt-mocha": "^0.4.11",
+    "grunt-contrib-watch": "^0.6.1"
   }
 }
