--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-mocha": "^0.4.11",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-browserify2": "^0.1.8",
+    "grunt-markdox": "^1.2.1"
   }
 }
