--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "Epicenter-JS-Libs",
   "version": "0.0.1",
+  "repository" : {
+    "type" : "git",
+    "url" : "https://github.com/forio/epicenter-js-libs"
+  },
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-mocha": "^0.4.11",
-    "grunt-contrib-watch": "^0.6.1",
     "grunt-browserify2": "^0.1.8",
-    "grunt-markdox": "^1.2.1"
+    "grunt-contrib-uglify": "^0.5.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-markdox": "^1.2.1",
+    "grunt-mocha": "^0.4.11"
   }
 }
