--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-uglify": "^0.5.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-jscs-checker": "^0.6.1",
     "grunt-markdox": "^1.2.1",
     "grunt-mocha": "^0.4.11",
     "husky": "^0.5.1",
     "jshint-stylish": "^0.2.0"
   },
   "scripts": {
-      "prepush": "grunt validate"
-    }
+    "prepush": "grunt validate"
+  }
 }
