--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-browserify2": "^0.1.8",
+    "grunt-bump": "0.0.15",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-uglify": "^0.5.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-conventional-changelog": "^1.1.0",
     "grunt-jscs-checker": "^0.6.1",
     "grunt-markdox": "^1.2.1",
     "grunt-mocha": "^0.4.11",
