--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "url": "https://github.com/forio/epicenter-js-libs"
   },
   "devDependencies": {
+    "growl": "^1.8.1",
     "grunt": "^0.4.5",
     "grunt-browserify2": "^0.1.8",
     "grunt-bump": "0.0.15",
