--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "grunt-contrib-uglify": "^0.5.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-conventional-changelog": "^1.1.0",
+    "grunt-jscs": "^0.8.1",
     "grunt-jscs-checker": "^0.6.1",
     "grunt-markdox": "^1.2.1",
     "grunt-mocha": "^0.4.11",
