Added addUsers, removeUsers, getGamesForUser, getCurrentRun APIs to game service

--- a/tests/.jshintrc
+++ b/tests/.jshintrc
@@ -28,6 +28,7 @@
         "$",
         "_",
         "should",
+        "expect",
         "sinon",
         "describe",         // Used by mocha
         "it",               // Used by mocha
