--- a/bower.json
+++ b/bower.json
@@ -15,8 +15,8 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "cometd-jquery": "2.9.0"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
