--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "grunt-mocha": "^0.4.11",
     "husky": "^0.5.1",
     "jshint-stylish": "^0.2.0",
-    "uglify-js": "^2.4.15"
+    "uglify-js": "^2.4.15",
+    "grunt-contrib-copy": "^0.7.0"
   },
   "scripts": {
     "prepush": "grunt validate"
