--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "grunt-jscs": "^0.8.1",
     "grunt-jscs-checker": "^0.6.1",
     "grunt-markdox": "^1.2.1",
-    "grunt-mocha": "^0.4.11",
+    "grunt-mocha-phantom-istanbul": "^0.1.1",
     "husky": "^0.5.1",
+    "istanbul": "~0.3.5",
     "jshint-stylish": "^0.2.0",
     "uglify-js": "^2.4.15"
   },
