Also generating debug build of the cometd libs

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@ local/
 
 dist/epicenter-edge.js
 dist/epicenter-multiplayer-dependencies.js
+dist/epicenter-multiplayer-dependencies.js.map
+dist/epicenter-multiplayer-dependencies.min.js
