install istanbul and create coverage related tasks

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,9 @@ documentation/generated
 local/
 
 dist/epicenter-edge.js
+
+#instanbul related
+coverage/
+coverage.json
+.DS_Store
+dist/epicenter-edge-instrument.js
