--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "grunt-mocha-phantom-istanbul": "^0.1.0",
     "husky": "^0.5.1",
     "jshint-stylish": "^0.2.0",
-    "uglify-js": "^2.4.15"
+    "uglify-js": "^2.4.15",
+    "istanbul": "^0.3.5",
+    "grunt-mocha-phantom-istanbul": "^0.1.1"
   },
   "scripts": {
     "prepush": "grunt validate"
