--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "husky": "^0.5.1",
     "istanbul": "^0.3.5",
     "jshint-stylish": "^0.2.0",
+    "minifyify": "^6.1.3",
     "uglify-js": "^2.4.15"
   },
   "scripts": {
