--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "url": "https://github.com/forio/epicenter-js-libs"
   },
   "devDependencies": {
+    "browserify-istanbul": "^0.1.5",
     "growl": "^1.8.1",
     "grunt": "^0.4.5",
     "grunt-browserify": "^3.3.0",
