--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ documentation/generated
 local/
 
 dist/epicenter-edge.js
+dist/epicenter-edge-instrumented.js
 dist/epicenter-multiplayer-dependencies.js
 dist/epicenter-multiplayer-dependencies.js.map
 dist/epicenter-multiplayer-dependencies.min.js
