--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "istanbul": "^0.3.5",
     "jshint-stylish": "^0.2.0",
     "minifyify": "^6.1.3",
-    "uglify-js": "^2.4.15"
+    "uglify-js": "^2.4.15",
+    "grunt-contrib-copy": "^0.8.0"
   },
   "scripts": {
     "prepush": "grunt validate"
