--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "jshint-stylish": "^0.2.0",
     "minifyify": "^6.1.3",
     "uglify-js": "^2.4.15",
-    "grunt-contrib-copy": "^0.8.0"
+    "grunt-contrib-copy": "^0.8.0",
+    "grunt-template-module": "^0.5.0"
   },
   "scripts": {
     "prepush": "grunt validate"
