--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "grunt-jscs-checker": "^0.6.1",
     "grunt-markdox": "^1.2.1",
     "grunt-mocha-phantom-istanbul": "^0.1.1",
+    "husky": "^0.5.1",
     "istanbul": "^0.3.5",
     "jshint-stylish": "^0.2.0",
     "minifyify": "^6.1.3",
