--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "grunt": "^0.4.5",
     "grunt-browserify": "^5.0.0",
     "grunt-bump": "0.0.15",
-    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-jshint": "1.0.0",
     "grunt-contrib-uglify": "^0.7.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-conventional-changelog": "^1.1.0",
@@ -21,7 +21,7 @@
     "grunt-mocha-phantom-istanbul": "^0.1.1",
     "husky": "^0.10.2",
     "istanbul": "^0.4.3",
-    "jshint-stylish": "^0.2.0",
+    "jshint-stylish": "2.2.0",
     "minifyify": "^6.1.3",
     "uglify-js": "^2.4.15",
     "grunt-contrib-copy": "^0.8.0",
