--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,10 @@
 {
   "name": "epicenter-js-libs",
-  "version": "1.7.1",
+  "version": "1.8.0",
   "homepage": "https://github.com/forio/epicenter-js-libs",
   "authors": [
-    "Naren Ranjit <nranjit@forio.com>"
+    "Naren Ranjit <nranjit@forio.com>",
+    "Ricardo Villarreal <rvillarreal@forio.com>"
   ],
   "private": true,
   "ignore": [
