EPICENTER-1966: Add babelify and development guide

--- a/.jshintrc
+++ b/.jshintrc
@@ -22,6 +22,7 @@
     "strict": true,
     "trailing": true,
     "eqnull": true,
+    "esversion": 6,
     "globals": {
         "$": false,
         "jQuery": false,
