--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
   },
   "main": "src/app.js",
   "devDependencies": {
+    "babel-polyfill": "^6.13.0",
+    "babel-preset-es2015": "^6.13.2",
+    "babelify": "^7.3.0",
     "browserify-istanbul": "^2.0.0",
     "growl": "^1.8.1",
     "grunt": "^0.4.5",
     "grunt-browserify": "^5.0.0",
     "grunt-bump": "0.0.15",
+    "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-jshint": "1.0.0",
     "grunt-contrib-uglify": "^0.7.0",
     "grunt-contrib-watch": "^0.6.1",
@@ -19,13 +23,12 @@
     "grunt-jscs": "^2.3.0",
     "grunt-markdox": "^1.2.1",
     "grunt-mocha-phantom-istanbul": "^0.1.1",
+    "grunt-template-module": "^0.5.0",
     "husky": "^0.10.2",
     "istanbul": "^0.4.3",
     "jshint-stylish": "2.2.0",
     "minifyify": "^6.1.3",
-    "uglify-js": "^2.4.15",
-    "grunt-contrib-copy": "^0.8.0",
-    "grunt-template-module": "^0.5.0"
+    "uglify-js": "^2.4.15"
   },
   "scripts": {
     "prepush": "grunt validate"
