--- a/package.json
+++ b/package.json
@@ -7,9 +7,6 @@
   },
   "main": "src/app.js",
   "devDependencies": {
-    "babel-polyfill": "^6.13.0",
-    "babel-preset-es2015": "^6.13.2",
-    "babelify": "^7.3.0",
     "browserify-istanbul": "^2.0.0",
     "growl": "^1.8.1",
     "grunt": "^0.4.5",
@@ -28,6 +25,7 @@
     "istanbul": "^0.4.3",
     "jshint-stylish": "2.2.0",
     "minifyify": "^6.1.3",
+    "object-assign": "^4.1.0",
     "uglify-js": "^2.4.15"
   },
   "scripts": {
