--- a/tests/.eslintrc
+++ b/tests/.eslintrc
@@ -8,6 +8,8 @@
         "_": false
     },
     "rules": {
-        "no-magic-numbers": 0
+        "no-magic-numbers": 0,
+        "one-var": 0,
+        "no-unused-expressions": 0
     }
 }
