--- a/.eslintrc
+++ b/.eslintrc
@@ -197,7 +197,10 @@
         "sort-vars": 0,
         "keyword-spacing": ["error", {"before": true, "after": true, "overrides": {}}],
         "space-before-blocks": 2,
-        "space-before-function-paren": [2, "always"],
+        "space-before-function-paren": [2, {
+            "anonymous": "always",
+            "named": "never"
+        }],
         "space-in-parens": [2, "never"],
         "space-infix-ops": [2, {
             "int32Hint": false
