--- a/tests/.eslintrc
+++ b/tests/.eslintrc
@@ -1,5 +1,8 @@
 {
     "extends": ["../.eslintrc"],
+    "env": {
+        "mocha": true
+    },
     "globals": {
         "expect": false,
         "sinon": false,
