exclude trashed runs when picking up last initialied

--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "uglify-js": "^2.7.3"
   },
   "scripts": {
+    "build": "grunt production",
+    "start": "grunt",
     "prepush": "grunt validate"
   },
   "dependencies": {
