use classes instead of ids to handle multiple scopes

--- a/tests/.eslintrc
+++ b/tests/.eslintrc
@@ -12,6 +12,7 @@
         "should": false
     },
     "rules": {
+        "no-alert": 0,
         "no-magic-numbers": 0,
         "one-var": 0,
         "no-unused-expressions": 0
