--- a/package.json
+++ b/package.json
@@ -1,49 +1,64 @@
 {
-  "name": "epicenter-js",
-  "version": "2.5.0",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/forio/epicenter-js-libs"
-  },
-  "main": "src/app.js",
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-istanbul": "^4.1.6",
-    "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
-    "babel-plugin-transform-es2015-block-scoping": "^6.26.0",
-    "babel-plugin-transform-es2015-classes": "^6.24.1",
-    "babel-plugin-transform-es2015-computed-properties": "^6.24.1",
-    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
-    "babel-plugin-transform-es2015-template-literals": "^6.22.0",
-    "growl": "^1.10.5",
-    "grunt": "^1.0.2",
-    "grunt-bump": "^0.8.0",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-uglify": "^2.0.0",
-    "grunt-contrib-watch": "^1.0.1",
-    "grunt-conventional-changelog": "^6.1.0",
-    "grunt-eslint": "^19.0.0",
-    "grunt-markdox": "^1.2.1",
-    "grunt-mocha-phantom-istanbul-senluchen2015": "0.2.1",
-    "grunt-template-module": "^0.5.0",
-    "grunt-webpack": "^3.1.1",
-    "husky": "^0.14.3",
-    "object-assign": "^4.1.1",
-    "uglify-js": "^2.7.3",
-    "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.1"
-  },
-  "scripts": {
-    "build": "./node_modules/grunt-cli/bin/grunt production",
-    "start": "./node_modules/grunt-cli/bin/grunt",
-    "prepush": "./node_modules/grunt-cli/bin/grunt validate"
-  },
-  "dependencies": {
-    "Base64": "^1.0.1",
-    "cometd-jquery": "github:forio/cometd-jquery",
-    "jquery": "^3.3.1"
-  }
+    "name": "epicenter-js",
+    "version": "2.5.0",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/forio/epicenter-js-libs"
+    },
+    "main": "src/app.js",
+    "devDependencies": {
+        "babel-cli": "^6.26.0",
+        "babel-core": "^6.26.0",
+        "babel-loader": "^7.1.2",
+        "babel-plugin-istanbul": "^4.1.6",
+        "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
+        "babel-plugin-transform-es2015-block-scoping": "^6.26.0",
+        "babel-plugin-transform-es2015-classes": "^6.24.1",
+        "babel-plugin-transform-es2015-computed-properties": "^6.24.1",
+        "babel-plugin-transform-es2015-destructuring": "^6.23.0",
+        "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+        "babel-plugin-transform-es2015-template-literals": "^6.22.0",
+        "chai": "^4.1.2",
+        "coveralls": "^3.0.0",
+        "eslint": "^4.18.1",
+        "fs-walk": "0.0.1",
+        "grunt": "^1.0.2",
+        "grunt-bump": "^0.8.0",
+        "grunt-cli": "^1.2.0",
+        "grunt-contrib-watch": "^1.0.0",
+        "grunt-conventional-changelog": "^6.1.0",
+        "grunt-eslint": "^20.1.0",
+        "grunt-karma": "^2.0.0",
+        "grunt-markdox": "^1.2.1",
+        "grunt-sass": "^2.1.0",
+        "grunt-webpack": "^3.1.1",
+        "husky": "^0.14.3",
+        "jit-grunt": "^0.10.0",
+        "karma": "^2.0.0",
+        "karma-chrome-launcher": "^2.2.0",
+        "karma-coverage": "^1.1.1",
+        "karma-mocha": "^1.3.0",
+        "karma-mocha-reporter": "^2.2.5",
+        "karma-sinon-chai": "^1.3.4",
+        "karma-webpack": "^3.0.0",
+        "lolex": "^2.3.2",
+        "mocha": "^5.1.0",
+        "raw-loader": "^0.5.1",
+        "sinon": "^4.5.0",
+        "sinon-chai": "^3.0.0",
+        "time-grunt": "^1.4.0",
+        "uglify-js": "^3.3.21",
+        "webpack": "^3.11.0",
+        "webpack-dev-server": "^2.11.1"
+    },
+    "scripts": {
+        "build": "./node_modules/grunt-cli/bin/grunt production",
+        "start": "./node_modules/grunt-cli/bin/grunt",
+        "prepush": "./node_modules/grunt-cli/bin/grunt validate"
+    },
+    "dependencies": {
+        "Base64": "^1.0.1",
+        "cometd-jquery": "github:forio/cometd-jquery",
+        "jquery": "^3.3.1"
+    }
 }
