working data api tests

--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
         "grunt": "^1.0.2",
         "grunt-bump": "^0.8.0",
         "grunt-cli": "^1.2.0",
+        "grunt-contrib-copy": "^1.0.0",
+        "grunt-contrib-uglify": "^3.3.0",
         "grunt-contrib-watch": "^1.0.0",
         "grunt-conventional-changelog": "^6.1.0",
         "grunt-eslint": "^20.1.0",
         "grunt-karma": "^2.0.0",
         "grunt-markdox": "^1.2.1",
         "grunt-sass": "^2.1.0",
+        "grunt-template-module": "^0.5.1",
         "grunt-webpack": "^3.1.1",
         "husky": "^0.14.3",
         "jit-grunt": "^0.10.0",
