--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "karma-mocha-reporter": "^2.2.5",
         "karma-sinon-chai": "^1.3.4",
         "karma-webpack": "^3.0.0",
+        "lodash": "^4.17.10",
         "lolex": "^2.3.2",
         "mocha": "^5.1.0",
         "raw-loader": "^0.5.1",
