--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "babel-plugin-transform-es2015-template-literals": "^6.22.0",
         "chai": "^4.1.2",
         "coveralls": "^3.0.0",
+        "doxdox": "^2.0.3",
         "eslint": "^4.18.1",
         "fs-walk": "0.0.2",
         "grunt": "^1.0.3",
@@ -54,7 +55,9 @@
         "webpack-dev-server": "^3.1.4"
     },
     "scripts": {
-        "build": "./node_modules/grunt-cli/bin/grunt production",
+        "document": "node ./build/docs/doxdox.js",
+        "release": "npm run document && ./node_modules/grunt-cli/bin/grunt production",
+        "build": "./node_modules/grunt-cli/bin/grunt production && npm run document",
         "start": "./node_modules/grunt-cli/bin/grunt",
         "prepush": "./node_modules/grunt-cli/bin/grunt validate"
     },
