--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
         "commonjs": true,
         "node": false
     },
+    "plugins": ["jsdoc"],
     "globals": {
         "$": false
     },
@@ -45,12 +46,6 @@
         "no-unexpected-multiline": 1,
         "no-unreachable": 2,
         "use-isnan": 1,
-        "valid-jsdoc": [1, {
-            "requireReturn": false,
-            "requireReturnType": false,
-            "requireParamDescription": false,
-            "requireReturnDescription": false
-        }],
         "valid-typeof": 2,
 
         "accessor-pairs": 2,
