--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "coveralls": "^3.0.0",
         "doxdox": "^2.0.3",
         "eslint": "^4.18.1",
+        "eslint-plugin-jsdoc": "^5.0.2",
         "fs-walk": "0.0.2",
         "grunt": "^1.0.3",
         "grunt-bump": "^0.8.0",
