update to dist files

--- a/.eslintrc
+++ b/.eslintrc
@@ -159,7 +159,9 @@
             "beforeColon": false,
             "afterColon": true
         }],
-        "linebreak-style": 2,
+        
+        // do not check linebreaks for windows/unix compatibility
+        "linebreak-style": 0,
         "lines-around-comment": [0, {
             "beforeBlockComment": true
         }],
